fix background issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -192,6 +195,8 @@ height: 100%;
 
 .youtube-container {
   margin-right: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 #barid {
